--- a/Log.ipynb
+++ b/Log.ipynb
@@ -48,6 +48,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![ssss](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZ0WcD0UiopSHLMFtDceb679rAXeVyy6MmavN4JSAXMT_hVhZ2YA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. 상용로그"
    ]
   },
